benetech/ServiceNet#1378: Fix displaying the map on iOS

--- a/src/main/webapp/app/modules/provider/all-records.scss
+++ b/src/main/webapp/app/modules/provider/all-records.scss
@@ -20,4 +20,8 @@
       color: black;
     }
   }
+
+  .mobile-map-container {
+    flex: 1;
+  }
 }
